--- a/.devcontainer/Dockerfile.dev
+++ b/.devcontainer/Dockerfile.dev
@@ -35,3 +35,6 @@ RUN export LATEST_COMPOSE_VERSION=$(curl -sSL "https://api.github.com/repos/dock
 # This will then get mounted into the shared app volume
 WORKDIR /workspace
 COPY . .
+RUN chown -R node:node /workspace
+USER node
+
